atualizando paths para lançar na main o projeto

--- a/index.html
+++ b/index.html
@@ -5,27 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EMAp Pokédex</title>
-    <link rel="icon" type="image/x-icon" href="../assets/ball.png">
-    <link rel="stylesheet" href="../pokedex-project/style.css">
+    <link rel="icon" type="image/x-icon" href="assets/ball.png">
+    <link rel="stylesheet" href="pokedex-project/style.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="./main.js" type="module"></script>
-    <script src="./buttonsAnimation.js" type="module"></script>
-    <script src="./regionControl.js" type="module"></script>
-    <script src="./locationControl.js" type="module"></script>
-    <script src="./contentScreenManager.js" type="module"></script>
-    <script src="./regionScreen.js" type="module"></script>
-    <script src="./barchart.js" type="module"></script>
-    <script src="./types.js" type="module"></script>
-    <script src="./consts.js" type="module"></script>
-    <script src="./locationScreen.js" type="module"></script>
-    <script src="./scatterPlot.js" type="module"></script>
-    <script src="./cardsPokedex.js" type="module"></script>
-    <script src="./radarChart.js" type="module"></script>
-    <script src="./heatMapDef.js" type="module"></script>
-    <script src="./heatMapAta.js" type="module"></script>
-    <script src="./mapsConsts.js" type="module"></script>
-    <script src="./mapManager.js" type="module"></script>
-    <script src="./boxplot.js" type="module"></script>
+    <script src="pokedex-project/main.js" type="module"></script>
+    <script src="pokedex-project/buttonsAnimation.js" type="module"></script>
+    <script src="pokedex-project/regionControl.js" type="module"></script>
+    <script src="pokedex-project/locationControl.js" type="module"></script>
+    <script src="pokedex-project/contentScreenManager.js" type="module"></script>
+    <script src="pokedex-project/regionScreen.js" type="module"></script>
+    <script src="pokedex-project/barchart.js" type="module"></script>
+    <script src="pokedex-project/types.js" type="module"></script>
+    <script src="pokedex-project/consts.js" type="module"></script>
+    <script src="pokedex-project/locationScreen.js" type="module"></script>
+    <script src="pokedex-project/scatterPlot.js" type="module"></script>
+    <script src="pokedex-project/cardsPokedex.js" type="module"></script>
+    <script src="pokedex-project/radarChart.js" type="module"></script>
+    <script src="pokedex-project/heatMapDef.js" type="module"></script>
+    <script src="pokedex-project/heatMapAta.js" type="module"></script>
+    <script src="pokedex-project/mapsConsts.js" type="module"></script>
+    <script src="pokedex-project/mapManager.js" type="module"></script>
+    <script src="pokedex-project/boxplot.js" type="module"></script>
 </head>
 
 <body>
@@ -44,7 +44,7 @@
                     </div>
                     <div class="pokedex-page-1-sup-2">
                         <div class="botao-4">
-                            <img id="folder" src="../assets/folder.png" alt="GitHub Folder">
+                            <img id="folder" src="assets/folder.png" alt="GitHub Folder">
                         </div>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                                     </div>
                                     <div class="real-map-container">
                                         <div class="map-left-screen">
-                                            <img src="../assets/maps/Kanto.png" id="map-img" alt="">
+                                            <img src="assets/maps/Kanto.png" id="map-img" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -73,20 +73,20 @@
                                         Kanto
                                     </div>
                                     <div class="left-button">
-                                        <img id="region-left" src="../assets/left.png" alt="Left">
+                                        <img id="region-left" src="assets/left.png" alt="Left">
                                     </div>
                                     <div class="right-button">
-                                        <img id="region-right" src="../assets/right.png" alt="Right">
+                                        <img id="region-right" src="assets/right.png" alt="Right">
                                     </div>
                                 </div>
 
                                 <div class="location-display">
                                     <div class="location-screen"></div>
                                     <div class="left-button">
-                                        <img id="location-left" src="../assets/left.png" alt="Left">
+                                        <img id="location-left" src="assets/left.png" alt="Left">
                                     </div>
                                     <div class="right-button">
-                                        <img id="location-right" src="../assets/right.png" alt="Right">
+                                        <img id="location-right" src="assets/right.png" alt="Right">
                                     </div>
                                 </div>
                             </div>
@@ -109,32 +109,32 @@
                                 </div>
                                 <div class="pokemons-select">
                                     <div class="left-pokemon">
-                                        <img id="left-pokemon" src="../assets/left.png" alt="Left">
+                                        <img id="left-pokemon" src="assets/left.png" alt="Left">
                                     </div>
                                     <div class="home-pokemon">
-                                        <img id="pokemon-home" src="../assets/home.png" alt="Home">
+                                        <img id="pokemon-home" src="assets/home.png" alt="Home">
                                     </div>
                                     <div class="right-pokemon">
-                                        <img id="pokemon-right" src="../assets/right.png" alt="Right">
+                                        <img id="pokemon-right" src="assets/right.png" alt="Right">
                                     </div>
                                 </div>
                                 <div class="screen-select">
                                     <div class="region-button">
-                                        <img src="../assets/earth-globe.png" alt="">
+                                        <img src="assets/earth-globe.png" alt="">
                                     </div>
                                     <div class="location-button">
-                                        <img src="../assets/compass.png" alt="">
+                                        <img src="assets/compass.png" alt="">
                                     </div>
                                     <div class="pokemons-button">
-                                        <img src="../assets/pokeball.png" alt="">
+                                        <img src="assets/pokeball.png" alt="">
                                     </div>
                                 </div>
                                 <div class="second-row-buttons">
                                     <div class="info-button">
-                                        <img src="../assets//info.png" alt="">
+                                        <img src="assets/info.png" alt="">
                                     </div>
                                     <div class="scroll-button">
-                                        <img src="../assets/chart.png" alt="">
+                                        <img src="assets/chart.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -150,7 +150,7 @@
         <div class="cabo-1">
             <div class="ponta-1"></div>
             <div class="corpo-cabo">
-                <img src="../assets/power.png" alt="">
+                <img src="assets/power.png" alt="">
             </div>
             <div class="ponta-1"></div>
         </div>
@@ -158,7 +158,7 @@
         <div class="cabo-2">
             <div class="ponta-2"></div>
             <div class="corpo-cabo">
-                <img src="../assets/usb.png" alt="">
+                <img src="assets/usb.png" alt="">
             </div>
             <div class="ponta-2"></div>
         </div>
@@ -168,7 +168,7 @@
             <div class="content-screen"></div>
             <div class="content-button">
                 <div class="real-content-button">
-                    <img src="../assets/game.png" alt="">
+                    <img src="assets/game.png" alt="">
                 </div>
             </div>
         </div>
@@ -177,7 +177,7 @@
         <div class="cabo-3">
             <div class="ponta-1"></div>
             <div class="corpo-cabo">
-                <img src="../assets/power.png" alt="">
+                <img src="assets/power.png" alt="">
             </div>
             <div class="ponta-1"></div>
         </div>
@@ -185,7 +185,7 @@
         <div class="cabo-4">
             <div class="ponta-2"></div>
             <div class="corpo-cabo">
-                <img src="../assets/usb.png" alt="">
+                <img src="assets/usb.png" alt="">
             </div>
             <div class="ponta-2"></div>
         </div>
@@ -193,7 +193,7 @@
         <div class="cabo-5">
             <div class="ponta-3"></div>
             <div class="corpo-cabo">
-                <img src="../assets/audio.png" alt="">
+                <img src="assets/audio.png" alt="">
             </div>
             <div class="ponta-3"></div>
         </div>
@@ -207,7 +207,7 @@
             <div class="authors-div">
                 <div class="author">
                     <div class="author-img">
-                        <img src="../assets/alessandra.png" alt="">
+                        <img src="assets/alessandra.png" alt="">
                     </div>
                     <div class="author-description">
                         <div class="authors-info">
@@ -232,17 +232,17 @@
                         </div>
                         <div class="authors-buttons">
                             <div class="linkedin-button" id="linkedin-alessandra">
-                                <img src="../assets/linkedin.png" alt="">
+                                <img src="assets/linkedin.png" alt="">
                             </div>
                             <div class="github-button" id="github-alessandra">
-                                <img src="../assets/github-sign.png" alt="">
+                                <img src="assets/github-sign.png" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="author">
                     <div class="author-img">
-                        <img src="../assets/matheus.png" alt="">
+                        <img src="assets/matheus.png" alt="">
                     </div>
                     <div class="author-description">
                         <div class="authors-info">
@@ -267,17 +267,17 @@
                         </div>
                         <div class="authors-buttons">
                             <div class="linkedin-button" id="linkedin-matheus">
-                                <img src="../assets/linkedin.png" alt="">
+                                <img src="assets/linkedin.png" alt="">
                             </div>
                             <div class="github-button" id="github-matheus">
-                                <img src="../assets/github-sign.png" alt="">
+                                <img src="assets/github-sign.png" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="author">
                     <div class="author-img">
-                        <img src="../assets/sillas.png" alt="">
+                        <img src="assets/sillas.png" alt="">
                     </div>
                     <div class="author-description">
                         <div class="authors-info">
@@ -302,10 +302,10 @@
                         </div>
                         <div class="authors-buttons">
                             <div class="linkedin-button" id="linkedin-sillas">
-                                <img src="../assets/linkedin.png" alt="">
+                                <img src="assets/linkedin.png" alt="">
                             </div>
                             <div class="github-button" id="github-sillas">
-                                <img src="../assets/github-sign.png" alt="">
+                                <img src="assets/github-sign.png" alt="">
                             </div>
                         </div>
                     </div>
