adiciona gerenciador de estado para telas e integra eventos de mudança de região e localização; melhora feedback visual dos botões de navegação

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="pokedex-project/main.js" type="module"></script>
     <script src="pokedex-project/buttonsAnimation.js" type="module"></script>
+    <script src="pokedex-project/screenStateManager.js" type="module"></script>
     <script src="pokedex-project/regionControl.js" type="module"></script>
     <script src="pokedex-project/locationControl.js" type="module"></script>
     <script src="pokedex-project/contentScreenManager.js" type="module"></script>
@@ -25,7 +26,6 @@
     <script src="pokedex-project/heatMapAta.js" type="module"></script>
     <script src="pokedex-project/mapsConsts.js" type="module"></script>
     <script src="pokedex-project/mapManager.js" type="module"></script>
-    <script src="pokedex-project/boxplot.js" type="module"></script>
 </head>
 
 <body>
