--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <div class="authors-container">
         <div class="authors-external-content">
             <div class="instructions-div">
-                <object class="pdf" data="https://eppg.fgv.br/sites/default/files/teste.pdf" width="100%" height="100%">
+                <object class="pdf" data="./assets//Instruções PokémonVis.pdf" width="100%" height="100%">
                 </object>
             </div>
             <div class="authors-div">
