adicionando o tooltip nos tipos do hetmap

--- a/index.html
+++ b/index.html
@@ -313,6 +313,8 @@
             </div>
         </div>
     </div>
+    <div class="tooltip-types"></div>
+    <div class="tooltip-types-2"></div>
 </body>
 
 </html>
