primeiros passos para a div do knn

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="pokedex-project/heatMapAta.js" type="module"></script>
     <script src="pokedex-project/mapsConsts.js" type="module"></script>
     <script src="pokedex-project/mapManager.js" type="module"></script>
+    <script src="pokedex-project/knnDiagram.js" type="module"></script>
 </head>
 
 <body>
