--- a/index.html
+++ b/index.html
@@ -316,6 +316,7 @@
     </div>
     <div class="tooltip-types"></div>
     <div class="tooltip-types-2"></div>
+    <div class="tooltip-knn"></div>
 </body>
 
 </html>
